--- a/styles/boardResponsive.css
+++ b/styles/boardResponsive.css
@@ -392,7 +392,18 @@
 
     .buttonsPrioOnEditPopUp {
       width: 255px;
+      gap: 6px;
+    }
+
+    .buttonsPrioOnEditPopUp .btn-prio {
+      padding: 10px 6px;
+      font-size: 14px;
       gap: 4px;
+    }
+
+    .buttonsPrioOnEditPopUp .btn-prio img {
+      width: 16px;
+      height: 16px;
     }
 
     .editPopupTitelTxt,
